@@ -4,6 +4,12 @@ Bug fixes:
     - Specifying a custom reactor with the "-r"-argument to piped should now
       work again.
 
+Features:
+    - The constructor of ``piped.event.Event`` now takes a single keyword
+      argument: ``async``, which, if ``True`` makes ``.__call__`` return
+      a deferred which callbacks when all the listeners have finished
+      processing the event.
+
 ========================== Release 0.5.3 2013-01-06 ==========================
 
 Features:
